--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta name="google-site-verification" content="OI6UKHo67wQrNKAmLe6AMX3oxZoR4xN5fvacmrN5vko" />
         <title>Variant Learners - Online Tuition Center</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
